🐛 Fixes an issue where text would be unreadable on project cards

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -6,6 +6,8 @@
 
 .project * {
     margin: 0;
+    position: relative;
+    z-index: 1;
 }
 
 .project h3, .project p {
@@ -30,7 +32,7 @@
     content: '';
     inset: 0;
     position: absolute;
-    z-index: -1;
+    z-index: 0;
     background-color: rgba(255, 255, 255, 0.0);
     transition: background-color 0.125s ease-out;
 }
